# scrobbledb

./: .gitignore  =0.85.0  AGENTS.md  LICENSE  PLAN_FOR_TRACK_BROWSING_TUI.md  README.md  pyproject.toml
.github/: WORKFLOWS.md  copilot-instructions.md
.github/workflows/: publish.yml  qa.yml  test.yml
docs/: cli.md
docs/commands/: albums.md  artists.md  auth.md  browse.md  config.md  export.md  import.md  index.md  ingest.md  plays.md  search.md  sql.md  stats.md  tracks.md  version.md
plans/: PLAN_BATCH_INSERT.md  PLAN_CLI_DOCS.md  PLAN_FOR_TRACK_BROWSING_TUI.md  PLAN_FTS5_TRIGGER_FIX.md  PLAN_RETRY_ON_FAILURE.md  PLAN_SQL_SUBCOMMAND.md  domain-specific-cli.md
scrobbledb/: cli.py  tui_browser.py
src/scrobbledb/: __main__.py  browse.py  cli.py  config_utils.py  default_loguru_config.toml  domain_format.py  domain_queries.py  export.py  lastfm.py  marimoui.py  sql.py  tui.py
src/scrobbledb/__marimo__/session/: marimo.py.json
src/scrobbledb/commands/: __init__.py  albums.py  artists.py  plays.py  stats.py  tracks.py
tests/: test_cli.py  test_data_adapter.py  test_docs_generation.py  test_export.py  test_lastfm_to_sqlite.py  test_logging.py  test_sql.py  test_stats.py  test_tui_markup.py
