[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrobbledb"
version = "1.1.0"
description = "Save data from last.fm/libre.fm to a SQLite database"
authors = [
    {name = "Jacob Kaplan-Moss", email = "jacob@jacobian.org"},
    {name = "Brian M. Dennis", email = "bmd@pirateninja.dev"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pylast>=3.1.0",
    "sqlite-utils>=1.12.1",
    "click>=7.0",
    "python-dateutil>=2.8.1",
    "platformdirs>=2.4.0",
    "rich>=10.11.0",
    "loguru>=0.7.3",
    "loguru-config",
]

[project.optional-dependencies]
dev = [
    "pytest>=5.2.2",
    "pytest-cov>=2.8.1",
]

[project.scripts]
scrobbledb = "scrobbledb.cli:cli"

[project.urls]
Repository = "https://github.com/jacobian/lastfm-to-sqlite/"

[dependency-groups]
dev = [
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
    "poethepoet>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-python-dateutil>=2.8.0",
]

[tool.setuptools.package-data]
scrobbledb = ["default_loguru_config.toml"]

[tool.uv.sources]
loguru-config = { git = "https://github.com/crossjam/loguru-config" }

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
# Enable these gradually as type annotations are added
no_implicit_optional = false
warn_return_any = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
# Allow untyped calls for now
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["pylast.*", "sqlite_utils.*", "loguru_config.*", "platformdirs.*", "pkg_resources.*"]
ignore_missing_imports = true

[tool.poe.tasks]
# Linting
[tool.poe.tasks.lint]
help = "Run ruff linter on source and test files"
cmd = "ruff check src/ tests/"

[tool.poe.tasks."lint:fix"]
help = "Run ruff linter and auto-fix issues"
cmd = "ruff check --fix src/ tests/"

# Type checking
[tool.poe.tasks.type]
help = "Run mypy type checker on source files"
cmd = "mypy src/"

# Testing
[tool.poe.tasks.test]
help = "Run pytest with verbose output"
cmd = "pytest -v"

[tool.poe.tasks."test:cov"]
help = "Run pytest with coverage report (terminal + HTML)"
cmd = "pytest --cov=scrobbledb --cov-report=term-missing --cov-report=html"

[tool.poe.tasks."test:quick"]
help = "Run pytest and stop on first failure"
cmd = "pytest -x"

# Combined QA - run all checks
[tool.poe.tasks.qa]
help = "Run all QA checks (lint, type, test)"
sequence = ["lint", "type", "test"]
ignore_fail = false
