[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrobbledb"
version = "1.2.0"
description = "Save data from last.fm/libre.fm to a SQLite database"
authors = [
    {name = "Jacob Kaplan-Moss", email = "jacob@jacobian.org"},
    {name = "Brian M. Dennis", email = "bmd@pirateninja.dev"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pylast>=3.1.0",
    "sqlite-utils>=1.12.1",
    "click>=7.0",
    "python-dateutil>=2.8.1",
    "platformdirs>=2.4.0",
    "rich>=10.11.0",
    "loguru>=0.7.3",
    "loguru-config",
    "textual>=0.85.0",
    "stamina>=24.2.0",
    "rapidfuzz>=3.0.0",
    "dateparser>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=5.2.2",
    "pytest-cov>=2.8.1",
    "cogapp>=3.4.1",
]

[project.scripts]
scrobbledb = "scrobbledb.cli:cli"

[project.urls]
Repository = "https://github.com/crossjam/scrobbledb"

[dependency-groups]
dev = [
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
    "poethepoet>=0.24.0",
    "ruff>=0.1.0",
    "ty",
    "types-python-dateutil>=2.8.0",
    "pip-audit>=2.0.0",
    "cogapp>=3.4.1",
]

[tool.setuptools.package-data]
scrobbledb = ["default_loguru_config.toml"]

[tool.uv.sources]
loguru-config = { git = "https://github.com/crossjam/loguru-config" }

[tool.ty]
# Ty configuration - lenient settings for existing codebase
# Enable stricter checks gradually as type annotations are added

[tool.ty.rules]
# Ignore certain rules for now to allow gradual type annotation adoption
unresolved-import = "ignore"           # Allow unresolved imports (e.g., pkg_resources)
possibly-missing-attribute = "ignore"  # Allow potentially missing attributes
unsupported-operator = "ignore"        # Allow operators on Unknown types
invalid-parameter-default = "ignore"   # Allow None defaults for typed parameters
invalid-argument-type = "ignore"       # Allow arguments with Unknown types
unresolved-attribute = "ignore"        # Allow attributes on Unknown types

[tool.poe.tasks]
# Linting
[tool.poe.tasks.lint]
help = "Run ruff linter on source and test files"
cmd = "ruff check src/ tests/"

[tool.poe.tasks."lint:fix"]
help = "Run ruff linter and auto-fix issues"
cmd = "ruff check --fix src/ tests/"

# Type checking
[tool.poe.tasks.type]
help = "Run ty type checker on source files"
cmd = "ty check src/"

# Security auditing
[tool.poe.tasks.audit]
help = "Run pip-audit to check for known vulnerabilities"
cmd = "pip-audit"

# Testing
[tool.poe.tasks.test]
help = "Run pytest with verbose output"
cmd = "pytest -v"

[tool.poe.tasks."test:cov"]
help = "Run pytest with coverage report (terminal + HTML)"
cmd = "pytest --cov=scrobbledb --cov-report=term-missing --cov-report=html"

[tool.poe.tasks."test:quick"]
help = "Run pytest and stop on first failure"
cmd = "pytest -x"

# Documentation
[tool.poe.tasks."docs:cli"]
help = "Regenerate CLI help snippets across docs/commands"
cmd = "env PYTHONPATH=src COLUMNS=100 uv run cog -r docs/commands/*.md"

# Combined QA - run all checks
[tool.poe.tasks.qa]
help = "Run all QA checks (lint, type, audit, test)"
sequence = ["lint", "type", "audit", "test"]
ignore_fail = false
